# fs

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  vix.json
.github/workflows/: fs-ci.yml
cmake/: softadastra_fsConfig.cmake.in
docs/: guide.md
examples/: CMakeLists.txt
include/softadastra/fs/: Fs.hpp
include/softadastra/fs/events/: EventBatch.hpp  FileEvent.hpp
include/softadastra/fs/path/: Path.hpp  PathNormalizer.hpp  PathUtils.hpp
include/softadastra/fs/scanner/: Scanner.hpp
include/softadastra/fs/snapshot/: Snapshot.hpp  SnapshotBuilder.hpp  SnapshotDiff.hpp
include/softadastra/fs/state/: FileMetadata.hpp  FileState.hpp
include/softadastra/fs/types/: FileEventType.hpp  FileType.hpp  WatchOptions.hpp
include/softadastra/fs/utils/: IgnoreMatcher.hpp
include/softadastra/fs/watcher/: IWatcherBackend.hpp  PollingWatcher.hpp  Watcher.hpp
platform/linux/: InotifyWatcher.cpp
platform/mac/: FSEventsWatcher.cpp
platform/windows/: WinWatcher.cpp
tests/: CMakeLists.txt  test_diff.cpp  test_path.cpp  test_snapshot.cpp  test_state.cpp  test_watcher.cpp
